--- a/templates/manager_informations_detail_stats.html
+++ b/templates/manager_informations_detail_stats.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -27,11 +27,11 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
-    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-    <li><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'Teachers' %}</a></li>
-    <li class="active">{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</li>
+    <li class="breadcrumb-item"><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li class="breadcrumb-item" id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'Teachers' %}</a></li>
+    <li class="breadcrumb-item active">{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</li>
 {% endblock %}
 
 {% block content %}
@@ -40,27 +40,27 @@
     <h2>{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</h2>
   </div>
   <ul class="nav nav-tabs">
-    <li><a href="{% url 'manager_informations_detail' pk=adviser.pk %}">{% trans 'Teacher profile' %}</a></li>
-    <li><a href="{% url 'manager_informations_detail_list' pk=adviser.pk %}">{% trans 'Linked dissertations' %}</a></li>
-    <li><a href="{% url 'manager_informations_detail_list_wait' pk=adviser.pk %}">{% trans 'Waiting dissertations' %}</a></li>
-    <li class="active"><a href="#">{% trans 'Teacher stats' %}</a></li>
+    <li class="nav-item"><a href="{% url 'manager_informations_detail' pk=adviser.pk %}" class="nav-link">{% trans 'Teacher profile' %}</a></li>
+    <li class="nav-item"><a href="{% url 'manager_informations_detail_list' pk=adviser.pk %}" class="nav-link">{% trans 'Linked dissertations' %}</a></li>
+    <li class="nav-item"><a href="{% url 'manager_informations_detail_list_wait' pk=adviser.pk %}" class="nav-link">{% trans 'Waiting dissertations' %}</a></li>
+    <li class="nav-item"><a href="#" class="nav-link active">{% trans 'Teacher stats' %}</a></li>
   </ul>
-  <div class="panel panel-default">
-    <div class="panel-body">
+  <div class="card border-top-0">
+    <div class="card-body">
       <div class="row">
-          <div class="col-md-12">
-              <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">{% trans 'Stats' %}</h3>
+          <div class="col-lg-12">
+              <div class="card">
+                  <div class="card-header">
+                    <h3 class="card-title fs-5 m-0">{% trans 'Stats' %}</h3>
                   </div>
-                  <div class="panel-body">
+                  <div class="card-body">
                       <div class="row">
-                        <div class="col-md-6" style="text-align: right">
+                        <div class="col-lg-6 text-end">
                             <label>{% trans 'Dissertations quantity needing answer' %}</label>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             {% if count_advisers_pro_request > 0 %}
-                                <span style="color: red"></span>
+                                <span class="text-danger"></span>
                             {% else %}
                                 <span>
                             {% endif %}
@@ -69,10 +69,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6" style="text-align: right">
+                        <div class="col-lg-6 text-end">
                             <label>{% trans 'Dissertations quantity as promotor' %}</label>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             {{ count_advisers_pro }}
                             {% for key,value in tab_offer_count.items %}
                                 <br>
@@ -81,41 +81,41 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6" style="text-align: right">
+                        <div class="col-lg-6 text-end">
                             <label>{% trans 'Dissertations quantity as copromotor' %}</label>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             {{ count_advisers_copro }}
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6" style="text-align: right">
+                        <div class="col-lg-6 text-end">
                             <label>{% trans 'Dissertations quantity as reader' %}</label>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             {{ count_advisers_reader }}
                         </div>
                     </div>
                     <br>
                     <div class="row">
-                        <div class="col-md-4">
-                          <h4 class="panel-title">{% trans 'Chart as promotor'  %}</h4>
+                        <div class="col-lg-4">
+                          <h4 class="card-title">{% trans 'Chart as promotor'  %}</h4>
                           {% if count_advisers_pro > 0 %}
                               <canvas id="pie_chart_pro" width="100" height="100"></canvas>
                           {% else %}
                               <label>{% trans 'No data' %}</label>
                           {% endif %}
                         </div>
-                        <div class="col-md-4">
-                          <h4 class="panel-title">{% trans 'Chart as copromotor'  %}</h4>
+                        <div class="col-lg-4">
+                          <h4 class="card-title">{% trans 'Chart as copromotor'  %}</h4>
                           {% if count_advisers_copro > 0 %}
                           <canvas id="pie_chart_copro" width="100" height="100"></canvas>
                           {% else %}
                               <label>{% trans 'No data' %}</label>
                           {% endif %}
                         </div>
-                        <div class="col-md-4">
-                          <h4 class="panel-title">{% trans 'Chart as reader'  %}</h4>
+                        <div class="col-lg-4">
+                          <h4 class="card-title">{% trans 'Chart as reader'  %}</h4>
                           {% if count_advisers_reader > 0 %}
                           <canvas id="pie_chart_read" width="100" height="100"></canvas>
                           {% else %}
