--- a/templates/dissertation/facultyadviser_add_inner.html
+++ b/templates/dissertation/facultyadviser_add_inner.html
@@ -1,11 +1,11 @@
 {% load static %}
-{% load bootstrap3 i18n %}
+{% load django_bootstrap5 i18n %}
     <div class="modal-body" id="form-modal-body">
         <form method="post" action='{{ request.get_full_path }}' class="post-form" id="form-modal">
         {% csrf_token %}
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="bt_close_add_manager_modal"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">{% trans 'Confirm manager add' %}</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% trans 'Close' %}" id="bt_close_add_manager_modal"></button>
         </div>
         <div class="modal-body">
             <div id="pnl_faculty_adviser_off">
@@ -18,7 +18,7 @@
         </form>
     </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal" id="bt_cancel_remove_manager_modal">{% trans 'Cancel' %}</button>
+    <button type="button" class="btn btn-default" data-bs-dismiss="modal" id="bt_cancel_remove_manager_modal">{% trans 'Cancel' %}</button>
     <input type="submit" id='add_faculty_adviser'class="btn btn-primary" onclick="$('#form-modal').submit();" value="{% trans 'Save' %}"/>
 </div>
 {{ form.media }}
