--- a/templates/dissertation/facultyadviser_confirm_delete_inner.html
+++ b/templates/dissertation/facultyadviser_confirm_delete_inner.html
@@ -1,10 +1,10 @@
 {% load static %}
-{% load bootstrap3 i18n %}
+{% load django_bootstrap5 i18n %}
 <form method="post" action='{{ request.get_full_path }}' class="post-form" id="form-modal">
     {% csrf_token %}
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="bt_close_remove_manager_modal"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">{% trans 'Confirm delete for :' %}{{ adviser }}</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% trans 'Close' %}" id="bt_close_remove_manager_modal"></button>
     </div>
     <div class="modal-body">
         <div id="pnl_faculty_adviser_off">
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" id="bt_cancel_remove_manager_modal">{% trans 'Cancel' %}</button>
+        <button type="button" class="btn btn-default" data-bs-dismiss="modal" id="bt_cancel_remove_manager_modal">{% trans 'Cancel' %}</button>
         <input type="submit" class="btn btn-primary"  value="{% trans 'Remove' %}"/>
     </div>
 </form>
