--- a/templates/dissertations_wait_list.html
+++ b/templates/dissertations_wait_list.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -27,28 +27,28 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
-    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-    <li class="active">{% trans 'Dissertations' %}</li>
+    <li class="breadcrumb-item"><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li class="breadcrumb-item" id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li class="breadcrumb-item active">{% trans 'Dissertations' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
     <h2>{% trans 'Dissertations' %}</h2>
   </div>
   <ul class="nav nav-tabs">
-    <li><a href="{% url 'dissertations_list' %}">{% trans 'All dissertations' %}</a></li>
-    <li class="active"><a href="#">{% trans 'Waiting promotor' %}</a></li>
+    <li class="nav-item"><a href="{% url 'dissertations_list' %}" class="nav-link">{% trans 'All dissertations' %}</a></li>
+    <li class="nav-item"><a href="#" class="nav-link active">{% trans 'Waiting promotor' %}</a></li>
   </ul>
-  <div class="panel panel-default">
-    <div class="panel-body">
+  <div class="card border-top-0">
+    <div class="card-body">
         <div class="row">
-          <div class="col-md-12">
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{% trans 'Dissertations as promotor' %}</h3>
+          <div class="col-lg-12">
+              <div class="card border-bottom-0">
+                <div class="card-header">
+                    <h3 class="card-title fs-5 m-0">{% trans 'Dissertations as promotor' %}</h3>
                 </div>
-                  <table class="table table-hover">
+                  <table class="table table-hover mb-0">
                     <tr>
                       <th>{% trans 'Title' context 'dissertation' %}</th>
                       <th>{% trans 'Author'%}</th>
@@ -66,33 +66,33 @@
                         <td>{{ dissert.author }}</td>
                         <td>
                             {% if dissert.status == 'DRAFT' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'DIR_SUBMIT' %}
-                            <span class="label label-primary">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-primary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'DIR_OK' %}
-                            <span class="label label-success">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-success">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'DIR_KO' %}
-                            <span class="label label-danger">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-danger">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'COM_SUBMIT' %}
-                            <span class="label label-primary">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-primary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'COM_OK' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'COM_KO' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'EVA_SUBMIT' %}
-                            <span class="label label-primary">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-primary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'EVA_OK' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'EVA_KO' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'TO_RECEIVE' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'TO_DEFEND' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'DEFENDED' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% elif dissert.status == 'ENDED' %}
-                            <span class="label label-default">{{ dissert.get_status_display }}</span>
+                            <span class="badge mb-1 lh-base bg-secondary">{{ dissert.get_status_display }}</span>
                             {% endif %}
                         </td>
                         <td>{{ dissert.education_group_year.acronym }}</td>
