--- a/templates/informations.html
+++ b/templates/informations.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -27,117 +27,117 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
-    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-    <li class="active">{% trans 'My informations' %}</li>
+    <li class="breadcrumb-item"><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li class="breadcrumb-item" id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li class="breadcrumb-item active">{% trans 'My informations' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
     <h2>{% trans 'My informations' %} - {{ adviser.person.last_name }}, {{ adviser.person.first_name }}</h2>
   </div>
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#">{% trans 'My profile' %}</a></li>
-    <li><a href="{% url 'informations_detail_stats' %}">{% trans 'My stats' %}</a></li>
+    <li class="nav-item"><a href="#" class="nav-link active">{% trans 'My profile' %}</a></li>
+    <li class="nav-item"><a href="{% url 'informations_detail_stats' %}" class="nav-link">{% trans 'My stats' %}</a></li>
   </ul>
-  <div class="panel panel-default">
-    <div class="panel-body">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Informations</h3>
+  <div class="card border-top-0">
+    <div class="card-body">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title fs-5 m-0">Informations</h3>
             </div>
-            <div class="panel-body">
+            <div class="card-body">
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
+                    <div class="col-lg-3 text-end">
                         <label>{% trans 'Name' %}</label>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <span>{{  first_name }} {{ last_name }}</span>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
+                    <div class="col-lg-3 text-end">
                         <label>{% trans 'email' %}</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         {% if adviser.available_by_email %}
-                            <span style="color:green">{{ adviser.person.email }}</span>
+                            <span class="text-success">{{ adviser.person.email }}</span>
                         {% else %}
-                            <span style="color:#C0C0C0">({{ adviser.person.email }})</span>
+                            <span class="text-muted">({{ adviser.person.email }})</span>
                         {% endif %}
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5">
                         {% if adviser.available_by_email %}
-                            <span class="glyphicon glyphicon-ok" style="color:green"></span>
+                            <i class="fa-regular fa-check text-success"></i>
                         {% else %}
-                            <span class="glyphicon glyphicon-remove" style="color:red"></span>
+                            <i class="fa-solid fa-xmark text-danger"></i>
                         {% endif %}
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
+                    <div class="col-lg-3 text-end">
                         <label>{% trans 'Phone' %}</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         {% if adviser.available_by_phone %}
-                            <span style="color:green">{{ adviser.person.phone }}</span>
+                            <span class="text-success">{{ adviser.person.phone }}</span>
                         {% else %}
-                            <span style="color:#C0C0C0">({{ adviser.person.phone }})</span>
+                            <span class="text-muted">({{ adviser.person.phone }})</span>
                         {% endif %}
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5">
                         {% if adviser.available_by_phone %}
-                            <span class="glyphicon glyphicon-ok" style="color:green"></span>
+                            <i class="fa-regular fa-check text-success"></i>
                         {% else %}
-                            <span class="glyphicon glyphicon-remove" style="color:red"></span>
+                            <i class="fa-solid fa-xmark text-danger"></i>
                         {% endif %}
                     </div>
                 </div>
                 {% if adviser.person.phone_mobile %}
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
+                    <div class="col-lg-3 text-end">
                         <label>{% trans 'Mobile phone' %}</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         {% if adviser.available_by_phone %}
-                            <span style="color:green">{{ adviser.person.phone_mobile }}</span>
+                            <span class="text-success">{{ adviser.person.phone_mobile }}</span>
                         {% else %}
-                            <span style="color:#C0C0C0">({{ adviser.person.phone_mobile }})</span>
+                            <span class="text-muted">({{ adviser.person.phone_mobile }})</span>
                         {% endif %}
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5">
                         {% if adviser.available_by_phone %}
-                            <span class="glyphicon glyphicon-ok" style="color:green"></span>
+                            <i class="fa-regular fa-check text-success"></i>
                         {% else %}
-                            <span class="glyphicon glyphicon-remove" style="color:red"></span>
+                            <i class="fa-solid fa-xmark text-danger"></i>
                         {% endif %}
                     </div>
                 </div>
                 {% endif %}
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
+                    <div class="col-lg-3 text-end">
                         <label>{% trans 'Available at office' %}</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         {% if adviser.available_at_office %}
-                            <span style="color:green">{% trans 'yes' %}</span>
+                            <span class="text-success">{% trans 'yes' %}</span>
                         {% else %}
-                            <span style="color:red">{% trans 'no' %}</span>
+                            <span class="text-danger">{% trans 'no' %}</span>
                         {% endif %}
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-lg-5">
                         {% if adviser.available_at_office %}
-                            <span class="glyphicon glyphicon-ok" style="color:green"></span>
+                            <i class="fa-regular fa-check text-success"></i>
                         {% else %}
-                            <span class="glyphicon glyphicon-remove" style="color:red"></span>
+                            <i class="fa-solid fa-xmark text-danger"></i>
                         {% endif %}
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3" style="text-align: right">
+                    <div class="col-lg-3 text-end">
                         <label>{% trans 'Comment' %}</label>
                     </div>
-                    <div class="col-md-9" style="text-align: justify">
+                    <div class="col-lg-9 text-start">
                         {{ adviser.comment|linebreaks }}
                     </div>
                 </div>
@@ -145,8 +145,8 @@
           </div>
       <div>
         <a href="{% url 'informations_edit' %}" id="lnk_informations_edit"
-           class="btn btn-default btn-primary" role="button" title="{% trans 'Edit teacher'%}">
-            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+           class="btn btn-primary" role="button" title="{% trans 'Edit teacher'%}">
+            <i class="fa-regular fa-pen-to-square" aria-hidden="true"></i>
             {% trans 'Edit' %}
         </a>
       </div>
