--- a/templates/informations_add.html
+++ b/templates/informations_add.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -27,50 +27,49 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
-    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-    <li><a href="{% url 'informations' %}" id="lnk_informations">{% trans 'Teachers' %}</a></li>
-    <li class="active">{% trans 'Add teacher' %}</li>
+    <li class="breadcrumb-item"><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li class="breadcrumb-item" id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'informations' %}" id="lnk_informations">{% trans 'Teachers' %}</a></li>
+    <li class="breadcrumb-item active">{% trans 'Add teacher' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     <h2>{% trans 'Add teacher' %}</h2>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card">
+    <div class="card-body">
         {% if form %}
         <form method="POST" class="post-form">
             {% csrf_token %}
             <div class="row">
-              <div class="col-md-9 col-md-offset-1">
+              <div class="col-lg-9 offset-lg-1">
                   <label for="person">{% trans 'Person to add' %} : </label>
                 <input type="hidden" name="person" id="person" value={{ pers.id }}>
                 {{ pers }}
               </div>
             </div>
             <div class="row">
-              <div class="col-md-9 col-md-offset-1">
+              <div class="col-lg-9 offset-lg-1">
                   <button type="submit" class="save btn btn-primary">{% trans 'Save' %}</button>
               </div>
             </div>
         </form>
         {% else %}
             <div class="row">
-                <div class="col-md-9 col-md-offset-1">
+                <div class="col-lg-9 offset-lg-1">
                     <label for="person">{% trans 'Person added' %} : </label>
                     {{ adv }}
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-9 col-md-offset-1">
+                <div class="col-lg-9 offset-lg-1">
                     <a href="{% url 'dissertations' %}" id="lnk_dissertations_button"
                     class="btn btn-default btn-primary" role="button" title="{% trans 'Edit teacher'%}">
                         {% trans 'Back' %}
                     </a>
                 </div>
             </div>
-
         {% endif %}
     </div>
 </div>
