--- a/templates/informations_add_search.html
+++ b/templates/informations_add_search.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -27,26 +27,26 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
-    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-    <li><a href="{% url 'informations' %}" id="lnk_informations">{% trans 'Teachers' %}</a></li>
-    <li class="active">{% trans 'Add teacher' %}</li>
+    <li class="breadcrumb-item"><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li class="breadcrumb-item" id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'informations' %}" id="lnk_informations">{% trans 'Teachers' %}</a></li>
+    <li class="breadcrumb-item active">{% trans 'Add teacher' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     <h2>{% trans 'Add teacher' %}</h2>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card">
+    <div class="card-body">
         <form method="POST" class="post-form">
             {% csrf_token %}
             {% if message %}
             <div class="row">
-              <div class="col-md-2" style="text-align: right; color: red;">
+              <div class="col-lg-2 text-end text-danger">
                   <label>{% trans 'Error' %}</label>
               </div>
-              <div class="col-md-10">
+              <div class="col-lg-10">
                 {% trans message %} {% if email %}: {{ email }}{% endif %}
                 {% if message_add %}
                   <ul>
@@ -62,14 +62,14 @@
             </div>
             <br>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-lg-6">
                   <h3>{% trans 'New search' %}</h3>
               </div>
             </div>
             <br>
             {% endif %}
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                     <p>
                         {% trans 'This screen allows you to add, in the dissertation application, as a teacher, a person who did not logged into the application. Please search the person with her/his e-mail address' %}
                     </p>
@@ -77,16 +77,16 @@
             </div>
             <br>
             <div class="row">
-              <div class="col-md-2" style="text-align: right;">
+              <div class="col-lg-2 text-end">
                   <label>{% trans 'email' %}</label>
               </div>
-              <div class="col-md-4">
-                <input type="text" class="form-control" id="txt_email"  name="email" style="margin:-6px;">
+              <div class="col-lg-4">
+                <input type="text" class="form-control" id="txt_email"  name="email">
               </div>
             </div>
             <br>
             <div class="row">
-              <div class="col-md-2 col-lg-offset-2">
+              <div class="col-lg-2 offset-lg-2">
                   <button type="submit" name="search_form" class="save btn btn-default">{% trans 'Search' %}</button>
               </div>
             </div>
