--- a/templates/manager_informations_add.html
+++ b/templates/manager_informations_add.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -27,64 +27,64 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
-    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-    <li><a href="{% url 'manager_informations' %}" id="lnk_manager_informations">{% trans 'Teachers' %}</a></li>
-    <li class="active">{% trans 'Add teacher' %}</li>
+    <li class="breadcrumb-item"><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li class="breadcrumb-item" id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'manager_informations' %}" id="lnk_manager_informations">{% trans 'Teachers' %}</a></li>
+    <li class="breadcrumb-item active">{% trans 'Add teacher' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     <h2>{% trans 'Add teacher' %}</h2>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card">
+    <div class="card-body">
         <form method="POST" class="post-form">
             {% csrf_token %}
             <div class="row">
-              <div class="col-md-9 col-md-offset-1">
+              <div class="col-lg-9 offset-lg-1">
                   <label for="person">{% trans 'Person to add' %} : </label>
                 <input type="hidden" name="person" id="person" value={{ pers.id }}>
                 {{ pers }}
               </div>
             </div>
             <br>
-            <div class="row {% if field.errors %}error{% endif %}"  style="padding-top: 4px;">
-                <div class="col-md-1" style="text-align: right;">
+            <div class="row mt-1 {% if field.errors %}error{% endif %}">
+                <div class="col-lg-1 text-end">
                     <input id="txt_available_by_email"  name="available_by_email"
-                        style="margin:-6px;" type="checkbox" {% if form.available_by_email.value %} checked {% endif %} >
+                        type="checkbox" {% if form.available_by_email.value %} checked {% endif %} >
                 </div>
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <label for="txt_available_by_email">{% trans 'Available by e-mail' %}</label>
                 </div>
             </div>
-            <div class="row {% if field.errors %}error{% endif %}"  style="padding-top: 4px;">
-                <div class="col-md-1" style="text-align: right;">
+            <div class="row pt-1 {% if field.errors %}error{% endif %}">
+                <div class="col-lg-1 text-end">
                     <input id="txt_available_by_phone"  name="available_by_phone"
-                        style="margin:-6px;" type="checkbox" {% if form.available_by_phone.value %} checked {% endif %} >
+                         type="checkbox" {% if form.available_by_phone.value %} checked {% endif %} >
                 </div>
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <label for="txt_available_by_phone">{% trans 'Available by phone' %}</label>
                 </div>
             </div>
-            <div class="row {% if field.errors %}error{% endif %}"  style="padding-top: 4px;">
-                <div class="col-md-1" style="text-align: right;">
+            <div class="row pt-1 {% if field.errors %}error{% endif %}">
+                <div class="col-lg-1 text-end">
                     <input id="txt_available_at_office"  name="available_at_office"
-                        style="margin:-6px;" type="checkbox" {% if form.available_at_office.value %} checked {% endif %} >
+                         type="checkbox" {% if form.available_at_office.value %} checked {% endif %} >
                 </div>
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <label for="txt_available_at_office">{% trans 'Available at office' %}</label>
                 </div>
             </div>
             <br>
             <div class="row {% if field.errors %}error{% endif %}">
-                <div class="col-md-9 col-lg-offset-1 form-group">
+                <div class="col-lg-9 offset-lg-1 form-group">
                     <label for="txt_comment">{% trans 'Comment' %}</label>
                     <textarea class="form-control" id="txt_comment"  name="comment" rows="10">{{ form.comment.value }}</textarea>
                 </div>
             </div>
             <br>
-            <div style="text-align: right;">
+            <div class="text-end">
                 <button type="submit" class="save btn btn-primary">{% trans 'Save' %}</button>
             </div>
         </form>
