--- a/templates/manager_informations_edit.html
+++ b/templates/manager_informations_edit.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -27,36 +27,36 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
-    <li id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
-    <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-    <li><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'Teachers' %}</a></li>
-    <li><a href="{% url 'manager_informations_detail' pk=adviser.pk %}">{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</a></li>
-    <li class="active">{% trans 'Edit' %}</li>
+    <li class="breadcrumb-item"><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
+    <li class="breadcrumb-item" id="lnk_cohorts_management"><a href="{% url 'cohorts_management' %}">{% trans "Cohorts management" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'Teachers' %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'manager_informations_detail' pk=adviser.pk %}">{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</a></li>
+    <li class="breadcrumb-item active">{% trans 'Edit' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
       <h2>{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</h2>
   </div>
-  <div class="panel panel-default">
-      <div class="panel-body">
+  <div class="card">
+      <div class="card-body">
           <form method="POST" class="post-form">
               {% csrf_token %}
                 <div class="row {% if field.errors %}error{% endif %}">
-                    <div class="col-md-1" style="text-align: right;">
+                    <div class="col-lg-1 text-end">
                         <input id="txt_available_by_email"  name="available_by_email"
                              type="checkbox" {% if form.available_by_email.value %} checked {% endif %} >
                     </div>
-                    <div class="col-md-11" style="padding-top: 4px;">
+                    <div class="col-lg-11 pt-1">
                         <label for="txt_available_by_email">{% trans 'Available by e-mail' %} ({{  email }})</label>
                     </div>
                 </div>
                 <div class="row {% if field.errors %}error{% endif %}">
-                    <div class="col-md-1" style="text-align: right;">
+                    <div class="col-lg-1 text-end">
                       <input id="txt_available_by_phone"  name="available_by_phone"
                             type="checkbox" {% if form.available_by_phone.value %} checked {% endif %} >
                     </div>
-                    <div class="col-md-11" style="padding-top: 4px;">
+                    <div class="col-lg-11 pt-1">
                        <label for="txt_available_by_phone">
                            {% trans 'Available by phone' %} ({{  phone }}
                            {% if phone_mobile %}- {{  phone_mobile }}{% endif %})
@@ -64,23 +64,23 @@
                     </div>
                 </div>
                 <div class="row {% if field.errors %}error{% endif %}">
-                    <div class="col-md-1" style="text-align: right;">
+                    <div class="col-lg-1 text-end">
                       <input id="txt_available_at_office"  name="available_at_office"
                             type="checkbox" {% if form.available_at_office.value %} checked {% endif %} >
                     </div>
-                    <div class="col-md-11" style="padding-top: 4px;">
+                    <div class="col-lg-11 pt-1">
                        <label for="txt_available_at_office">{% trans 'Available at office' %}</label>
                     </div>
                 </div>
                 <br>
                 <div class="row {% if field.errors %}error{% endif %}">
-                    <div class="col-md-10 col-md-offset-1 form-group">
+                    <div class="col-lg-10 offset-lg-1 form-group">
                         <label for="txt_comment">{% trans 'Comment' %}</label>
                         <textarea class="form-control" id="txt_comment"  name="comment" rows="10">{{ form.comment.value }}</textarea>
                     </div>
                 </div>
                 <br>
-                <div style="text-align: right;">
+                <div class="text-end">
                     <button type="submit" class="save btn btn-primary">{% trans 'Save' %}</button>
                 </div>
           </form>
