--- a/templates/propositiondocumentfile_confirm_delete_inner.html
+++ b/templates/propositiondocumentfile_confirm_delete_inner.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load bootstrap3 i18n %}
+{% load django_bootstrap5 i18n %}
 
 {% comment "License" %}
  * OSIS stands for Open Student Information System. It's an application
@@ -25,7 +25,7 @@
  * see http://www.gnu.org/licenses/.
 {% endcomment %}
 
-<div class="page-header col-md-offset-3">
+<div class="page-header offset-lg-3">
   <h2>{% trans 'Delete file' %}</h2>
 </div>
 <div class="modal-body" id="form-modal-body">
@@ -33,7 +33,7 @@
       {% csrf_token %}
 
       <div class="row">
-          <div class="col-md-8 col-md-offset-1">
+          <div class="col-lg-8 offset-lg-1">
             <span>{% trans 'Are you sure you want to delete this document?' %} </span>
           </div>
       </div>
@@ -41,7 +41,7 @@
   {{ form.media }}
 </div>
 
-<div class="modal-footer" style="text-align:right">
-   <button type="button" class="btn btn-default" data-dismiss="modal" id="bt_cancel_remove_manager_modal">{% trans 'Cancel' %}</button>
+<div class="modal-footer text-end">
+   <button type="button" class="btn btn-default" data-bs-dismiss="modal" id="bt_cancel_remove_manager_modal">{% trans 'Cancel' %}</button>
    <button type="submit" class="save btn btn-primary" onclick="$('#form-modal').submit();">{% trans 'Delete' %}</button>
 </div>
